compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_with_public_function_with_correct_arity_4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Public function with correct arity from another module should be suggested.\n\nimport module\npub fn main() {\n    use <- wibble\n    1\n}"
---
----- SOURCE CODE
-- module.gleam

pub fn wibble(_) {
    1
}

-- main.gleam

// Public function with correct arity from another module should be suggested.

import module
pub fn main() {
    use <- wibble
    1
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:12
  │
6 │     use <- wibble
  │            ^^^^^^

The name `wibble` is not in scope here.
Did you mean one of these:

  - module.wibble
